--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "bootstrap": "^5.2.3",
     "codemirror": "^6.0.1",
     "express": "^4.18.2",
+    "vite-plugin-static-copy": "^0.17.1",
     "vue": "^3.2.47",
     "vue-codemirror": "^6.1.1",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
@@ -29,7 +32,7 @@
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
     "prettier": "^2.8.7",
-    "vite": "^4.1.4",
+    "vite": "^5.0.0",
     "vite-plugin-plain-text": "^1.4.2"
   }
 }
